--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -19,10 +19,10 @@
           <hlm-checkbox formControlName="isCheck" />
           Recordar correo electronico
         </label>
-        <button hlmBtn class="p-2 w-full my-11">Continuar</button>
+        <button hlmBtn class="p-2 w-full my-11" routerLink="/lock">Continuar</button>
       </div>
       <p class="mt-5 text-sm">¿Eres nuevo?
-        <a class="text-primary hover:underline" routerLink="/register" routerLinkActive="active"
+        <a class="text-primary hover:underline text-sm" routerLink="/register" routerLinkActive="active"
           ariaCurrentWhenActive="page">Crear
           cuenta</a>
       </p>
